[package]
name = "wdb"
version = "0.1.2"
description = "A debugger for C."
edition = "2021"
exclude = ["/.github"]
keywords = ["debugger", "ELF"]
license = "GPL-3.0"
readme = "./README.md"
repository = "https://github.com/weirdsmiley/wdb"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.28.3"
nix = "0.24.1"
gimli = "0.26.1"
